tests/error/comptime/pointer_arithmetic10.bz
// error: invalid pointer arithmetic operation with type '*int32' and offset 1
// note: while evaluating expression at compile time
// note: address points to an element outside its lifetime in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc([int32, int32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [ 0, 0 ]);
		let inner_p: *int32 = &(*p)[0];
		__builtin_destruct_value(*p);
		inner_p + 1;
	});
}
